--- a/AOs.csproj
+++ b/AOs.csproj
@@ -2,16 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
     <Version>1.7</Version>
     <AssemblyVersion>1.7</AssemblyVersion>
     <FileDescription>
-      AOs 1.7 Snapshot 7.1 or AOs 1.7.1 is a beta version for the main release of AOs 1.7. AOs is an Open-source Terminal based Operating System written in C#. AOs is inspired by MS-DOS and wants to improve User Efficiency.
+      AOs 1.7 Snapshot 7.3 or AOs 1.7.3 is a beta version for the main release of AOs 1.7. AOs is an Open-source Terminal based Operating System written in C#. AOs is inspired by MS-DOS and wants to improve User Efficiency.
     </FileDescription>
-    <FileVersion>1.7.1</FileVersion>
+    <FileVersion>1.7.3</FileVersion>
     <Company>Light-Lens</Company>
     <Authors>Srijan Srivastava</Authors>
-    <Product>AOs 1.7</Product>
+    <Product>AOs</Product>
     <Copyright>Copyright © 2021</Copyright>
   </PropertyGroup>
 
