--- a/AOs.csproj
+++ b/AOs.csproj
@@ -2,21 +2,21 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>AOs</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
 
-    <Version>2.0</Version>
-    <AssemblyVersion>2.0</AssemblyVersion>
-    <ApplicationIcon>Files.x72/img/src/AOs.ico</ApplicationIcon>
+    <Version>2.3</Version>
+    <AssemblyVersion>2.3</AssemblyVersion>
+    <ApplicationIcon>img/AOs.ico</ApplicationIcon>
 
-    <FileDescription>
-      AOs is a Command line utility designed to improve your Efficiency and Productivity.
-    </FileDescription>
-    <FileVersion>2.0</FileVersion>
+    <FileDescription>Command-line utility for improved efficiency and productivity.</FileDescription>
+    <FileVersion>2.3</FileVersion>
     <Company>Light-Lens</Company>
     <Authors>Srijan Srivastava</Authors>
     <Product>AOs</Product>
-    <Copyright>Copyright © 2022</Copyright>
+    <Copyright>Copyright © 2023</Copyright>
   </PropertyGroup>
 
 </Project>
