Get ready for AOs 2.3.9

--- a/AOs.csproj
+++ b/AOs.csproj
@@ -19,4 +19,8 @@
     <Copyright>Copyright © 2023</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
