update AOs about info

--- a/AOs.csproj
+++ b/AOs.csproj
@@ -11,7 +11,7 @@
     <AssemblyVersion>2.5</AssemblyVersion>
     <ApplicationIcon>img/AOs.ico</ApplicationIcon>
 
-    <FileDescription>Command-line utility for improved efficiency and productivity.</FileDescription>
+    <FileDescription>A Developer Command-line Tool Built for Developers by a Developer</FileDescription>
     <FileVersion>2.5</FileVersion>
     <Company>Light-Lens</Company>
     <Authors>Srijan Srivastava</Authors>
