--- a/AOs.csproj
+++ b/AOs.csproj
@@ -1,20 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-<OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>AOs</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+    	<TargetFramework>net8.0</TargetFramework>
+    	<RootNamespace>AOs</RootNamespace>
+    	<ImplicitUsings>enable</ImplicitUsings>
+    	<Nullable>disable</Nullable>
 
-    <Version>2.5</Version>
-    <ApplicationIcon>img/AOs.ico</ApplicationIcon>
-    <Description>A Developer Command-line Tool Built for Developers by a Developer.</Description>
-    <FileVersion>2.5.0</FileVersion>
-    <Company>Light-Lens</Company>
-    <Authors>Srijan Srivastava</Authors>
-    <Product>AOs</Product>
-    <Copyright>Copyright © 2023</Copyright>
-  </PropertyGroup>
+    	<Version>2.6</Version>
+    	<ApplicationIcon>img/AOs.ico</ApplicationIcon>
+    	<Description>A Developer Command-line Tool Built for Developers by a Developer.</Description>
+    	<FileVersion>2.6.0</FileVersion>
+    	<Company>Light-Lens</Company>
+    	<Authors>Srijan Srivastava</Authors>
+    	<Product>AOs</Product>
+    	<Copyright>Copyright © 2024</Copyright>
+		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion> <!-- https://github.com/dotnet/runtime/issues/95134 -->
+  	</PropertyGroup>
 
 </Project>
