--- a/AOs.csproj
+++ b/AOs.csproj
@@ -3,6 +3,10 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
     	<TargetFramework>net8.0</TargetFramework>
+		<PublishSingleFile>true</PublishSingleFile>
+		<SelfContained>true</SelfContained>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+
     	<RootNamespace>AOs</RootNamespace>
     	<ImplicitUsings>enable</ImplicitUsings>
     	<Nullable>disable</Nullable>
@@ -23,7 +27,7 @@
 	<ItemGroup>
 		<ContentWithTargetPath Include="src\Files.x72\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>Filex.x72\%(RecursiveDir)\%(Filename)%(Extension)</TargetPath>
+			<TargetPath>Files.x72\%(RecursiveDir)\%(Filename)%(Extension)</TargetPath>
 		</ContentWithTargetPath>
 	</ItemGroup>
 
