Delete history.json from 'Files.x72\root' folder from source

--- a/src/Files.x72/root/settings.json
+++ b/src/Files.x72/root/settings.json
@@ -12,7 +12,7 @@
         ],
         "search_paths": [
             "C:\\Users\\%username%\\Desktop",
-            "D:\\"
+            "C:\\ProgramData\\Microsoft\\Windows\\Start Menu\\Programs"
         ],
         "excluded_items": [""]
     },
