Add the .lnk extention in settings

--- a/src/Files.x72/root/settings.json
+++ b/src/Files.x72/root/settings.json
@@ -8,7 +8,7 @@
     },
     "search_index": {
         "extensions": [
-            ".exe", ".msi"
+            ".exe", ".msi", ".lnk"
         ],
         "search_paths": [
             "C:\\Users\\%username%\\Desktop",
