--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/shared/Creadf"]
 	path = src/shared/Creadf
-	url = https://github.com/Light-Lens/Creadf.git
+	url = https://github.com/SrijanSriv211/Creadf.git
